Fix login page element overlapping with styles

--- a/src/components/forms/elements/FormikTestField.module.css
+++ b/src/components/forms/elements/FormikTestField.module.css
@@ -4,10 +4,10 @@
 }
 
 .inputWrapper {
-	margin-bottom: 1.5rem;
-	margin-top: 1.5rem;
+	margin-top: 1rem;
 }
 
 .titleClassName {
+	padding-top: 0.5rem;
 	padding-bottom: 0.5rem;
 }
