--- a/src/components/forms/login/Login.module.css
+++ b/src/components/forms/login/Login.module.css
@@ -2,10 +2,25 @@
 	display: block;
 }
 
+.forgotPasswordLinkWrapper {
+	padding-top: 0.5rem;
+}
+
+
+.forgotPasswordLinkWrapper .forgotPasswordLink{
+	color: #999999;
+	text-decoration: underline;
+}
+
+
 .loginForm {
 	position: fixed;
 	max-width: 400px;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+}
+
+.buttonWrapper {
+	margin-top: 2rem;
 }
